logs/general/info.log
2020-08-23T17:23:15.012Z | info | Server Has Started listening on PORT: 5000
2020-08-23T17:23:15.016Z | error | Server Has Started listening on PORT: 5000
2020-08-23T17:27:33.049Z | info | Server Has Started listening on PORT: 5000
2020-08-23T17:27:33.051Z | error | Server Has Started listening on PORT: 5000
2020-08-23T17:28:09.475Z | info | Server Has Started listening on PORT: 5000
2020-08-23T17:28:22.873Z | info | Admin --> GET /users invoked
2020-08-24T05:17:00.557Z | info | Server Has Started listening on PORT: 5000
2020-08-24T06:51:20.512Z | error | uncaughtException: Unexpected token <<
D:\UCSC\Group-Project-II\server\src\models\mysql.js:12
<<<<<<< HEAD
^^

SyntaxError: Unexpected token <<
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
2020-08-24T07:19:03.829Z | error | uncaughtException: Unexpected token <<
D:\UCSC\Group-Project-II\server\src\models\mysql.js:12
<<<<<<< HEAD
^^

SyntaxError: Unexpected token <<
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
2020-08-24T07:23:08.438Z | info | Server Has Started listening on PORT: 5000
2020-08-24T17:28:25.977Z | info | Server Has Started listening on PORT: 5000
2020-08-24T17:29:59.904Z | info | Server Has Started listening on PORT: 5000
2020-08-25T16:10:50.363Z | info | Server Has Started listening on PORT: 5000
2020-08-25T16:25:44.386Z | info | Server Has Started listening on PORT: 5000
2020-08-25T16:52:48.849Z | info | Server Has Started listening on PORT: 5000
2020-08-25T16:53:12.826Z | info | Server Has Started listening on PORT: 5000
